<resources>
    <string name="app_name">AimAssistant</string>
    <string name="TypeOfMissile">Wybierz Rodzaj Pocisku</string>
    <string name="missile1">M383/M384</string>
    <string name="missile2">M43I</string>
    <string name="missile3">M385I/M918</string>
    <string name="missile4">M922/M922A1</string>
    <string name="calibration">Uchwyt niestandardowy</string>
    <string name="backbutton">WSTECZ</string>
    <string name="typedistancetotarged">WPISZ ODLEGŁOŚĆ DO CELU</string>
    <string name="highshot">Strzał za zasłony</string>
    <string name="lowshot">Strzał Prosty</string>
    <string name="infantry">PIECHOTA</string>
    <string name="base">OBÓZ</string>
    <string name="infantryvehicle">POJAZD</string>
    <string name="armoredvehicle">POJAZD UZBROJONY</string>
    <string name="settingsfinal">WYBRANO USTAWIENIA:</string>
    <string name="next">DALEJ</string>
    <string name="targetangle">ŻĄDANY KĄT</string>
    <string name="currentangle">KĄT PODNIESIENIA LUFY</string>
    <string name="nextshot">NASTEPNY STRZAŁ</string>
    <string name="modedark">Tryb Ciemny</string>
    <string name="modelight">Tryb Jasny</string>
    <string name="maxrange">Maksymalny zasięg = </string>
    <string name="nexttarget">Inny Cel</string>
    <string name="currenthandleangle">Kąt pochylenia uchwytu</string>
    <string name="setcalibration">Potwierdź</string>
    <string name="typehandleangle">Wprowadź kąt pochylenia uchwytu</string>
</resources>
