<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <!--finalscreen -->
    <!--finalscreen -->
    <!--finalscreen -->
    <LinearLayout
        android:id="@+id/layout_final_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp">
            <TextView
                android:id="@+id/targetangletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/targetangle"
                android:textSize="35sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/targetangle"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="100sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/currentangletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/currentangle"
                android:textSize="35sp"/>
            <TextView
                android:id="@+id/CurrentAngleFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="150sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/IRdatashow"
                android:textColor="@color/white"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center"
            android:paddingBottom="15dp">
            <Button
                android:id="@+id/nextshot"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/nextshot" />

        </LinearLayout>
    </LinearLayout>
    <!--finalscreen -->
    <!--finalscreen -->
    <!--finalscreen -->

    <!--mainmenu-->
    <!--mainmenu-->
    <!--mainmenu-->
    <LinearLayout
        android:id="@+id/layout_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <Button
            android:id="@+id/buttonviewchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="TryBCiemny"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/TypeOfMissile"
            android:textSize="30sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/missle1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/missile1"
                android:layout_margin="10dp" />
            <Button
                android:id="@+id/missle2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/missile2"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/missle3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/missile3"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/missle4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/missile4"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/CurrentAngleMain"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:textAlignment="center"
                android:textSize="35dp"
                android:gravity="top"
                android:layout_gravity="bottom"/>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>
            <Button
                android:id="@+id/calibration"
                android:text="@string/calibration"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|right" />
        </LinearLayout>
    </LinearLayout>
    <!--mainmenu-->
    <!--mainmenu-->
    <!--mainmenu-->

    <!--target settings-->
    <!--target settings-->
    <!--target settings-->
    <LinearLayout
        android:id="@+id/layout_target_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:paddingStart="25dp">
                <TextView
                    android:id="@+id/CurrentAngleSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:gravity="top"
                    android:layout_gravity="bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/backbuttonsettingsmenu"
                    android:background="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/backbutton"
                    android:textSize="30sp"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/typedistancetotarged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/typedistancetotarged"
                android:textSize="25sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/distanceIn"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textAlignment="viewEnd"
                android:layout_width="150dp"
                android:inputType="number"
                android:background="@color/grey"
                android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/distanceInUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m"
                    android:textSize="45sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                android:id="@+id/maxrangestatictext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxrange"
                android:textColor="@color/white"
                android:textSize="20sp"/>
             <TextView
                android:id="@+id/maxrangetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:paddingStart="25dp">
                <TextView
                    android:id="@+id/highshotText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/highshot"
                    android:textSize="24sp"/>
                <ImageButton
                    android:id="@+id/highshot"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:src="@drawable/highshot"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="25dp">
                <TextView
                    android:id="@+id/lowshowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lowshot"
                    android:textSize="25sp" />
                <ImageButton
                    android:id="@+id/lowshot"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/lowshot"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/shotchosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/targettype1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/piechota"
                android:paddingLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/infantry"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@color/white"
                android:paddingTop="5dp" />
            <Button
                android:id="@+id/targettype2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/base"
                android:paddingLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/base"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@color/white"
                android:paddingTop="5dp"/>
            <Button
                android:id="@+id/targettype3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/infantryvehicle"
                android:paddingLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/infantryvehicle"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@color/white"
                android:paddingTop="5dp"/>
            <Button
                android:id="@+id/targettype4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/armoredvehicle"
                android:paddingLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/armoredvehicle"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@color/white"
                android:paddingTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/next2"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:text="@string/next"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
    <!--target settings-->
    <!--target settings-->
    <!--target settings-->

</LinearLayout>